fix: add class check-failed to first checklist item

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       <section class="content-section pw-checks">
         <ul class="pw-checklist">
-          <li class="pw-checklist__item" id="equal-check">
+          <li class="pw-checklist__item check-failed" id="equal-check">
             Passwords are equal
             <span class="pw-checklist__icon icon--check-failed">❌</span>
             <span class="pw-checklist__icon icon--check-passed">✅</span>
